[package]
name = "sparc"
version = "0.1.0"
authors = ["Jeehoon Kang <jeehoon.kang@sf.snu.ac.kr>"]
edition = "2018"
build = "build.rs"

[dependencies]
rayon = "1.0.3"
lalrpop-util = "0.16.3"
regex = "1.1.0"
rustyline = "3.0.0"
clap = "2.32.0"
codespan = "0.2.0"
codespan-reporting = "0.2.0"
structopt = "0.2.14"

[build-dependencies]
lalrpop = "0.16.3"
