[package]
name = "sparc"
version = "0.1.0"
authors = ["Jeehoon Kang <jeehoon.kang@sf.snu.ac.kr>"]
edition = "2018"
build = "build.rs"

[dependencies]
rayon = "1.10.0"
lalrpop-util = "0.22.0"
regex = "1.11.1"
rustyline = "15.0.0"
clap = "4.5.23"
codespan = "0.11.1"
codespan-reporting = "0.11.1"
structopt = "0.3.26"

[build-dependencies]
lalrpop = "0.22.0"
